fix: tools page dark mode issue

--- a/assets/scss/control/_plugin-mode.scss
+++ b/assets/scss/control/_plugin-mode.scss
@@ -383,8 +383,16 @@
 		background: #252f47;
 		color: $light;
 	}
+	.submit {
+		color: $white;
+	}
 	#response {
 		color: #fff;
+		.btl-migration-logs {
+			background-color: #252f47;
+			color: white;
+			box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+		}
 	}
 }
 .btl-tab-panel-inner .btl-tab-panel-header {
